--- a/styles/style.css
+++ b/styles/style.css
@@ -2,24 +2,38 @@
   filter: brightness(1.75);
 }
 
-.green {
-  background-color: Green;
+.simonButton {
+  padding: 100px;
+  margin: 0px 2px 0px 2px;
+  background-repeat: no-repeat;
 }
 
-.yellow {
-  background-color: #bbbb00;
+.green {
+  /*background-color: Green;*/
+  background-image: url('../svg/button-green.svg');
 }
 
 .red {
-  background-color: #880000;
-
+  /*background-color: #880000;*/
+  background-image: url('../svg/button-red.svg');
 }
+
+.yellow {
+  /*background-color: #bbbb00;*/
+  background-image: url('../svg/button-yellow.svg');
+}
+
 
 .blue {
-  background-color: #000080;
+  /*background-color: #000080;*/
+  background-image: url('../svg/button-blue.svg');
 }
 
+
 #buttongrid {
+  background-color: #555555;
+  padding: 20px;
+  border-radius: 100%;
   display: inline-grid;
   grid-template-rows: 50% 50%;
   grid-template-columns: 50% 50%;
